--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ a {
     height: 25vh;
     background-color: #1F2937;
     justify-content: space-between;
-    padding: 150px;
+    padding: 120px 150px;
     align-items: center;
-    gap: 42px;
+    gap: 150px;
 }
 
 .con1-content1 {
@@ -96,3 +96,42 @@ button {
 
 /* Container #2 */
 
+.title {
+    font-size: 36px;
+    font-weight: 900;
+    display: flex;
+    justify-content: center;
+    padding: 50px 0;
+}
+
+.container2-child {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+    padding-bottom: 150px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+}
+
+.square {
+    height: 200px;
+    width: 200px;
+    border: 5px solid #3882F6;
+    border-radius: 25px;
+}
+
+.text {
+    display: flex;
+    flex: auto;
+    flex-wrap: wrap;
+    max-width: 200px;
+    font-size: 22px;
+    color: gray;
+    text-align: center;
+}
